snowty-dune-for-mei/_build/default/src/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
prgm' -> . prgm [ # ]
## Transitions:
-- On HAN shift to state 1
-- On FUN shift to state 163
-- On prgm shift to state 172
-- On decls shift to state 173
## Reductions:
-- On EOF
--   reduce production decls ->

State 1:
## Known stack suffix:
## HAN
## LR(1) items:
decls -> HAN . bndl NAME prms blck decls [ EOF ]
## Transitions:
-- On LANGLE shift to state 2
-- On bndl shift to state 9
## Reductions:

State 2:
## Known stack suffix:
## LANGLE
## LR(1) items:
bndl -> LANGLE . NAME bndlc RANGLE [ NAME ]
## Transitions:
-- On NAME shift to state 3
## Reductions:

State 3:
## Known stack suffix:
## LANGLE NAME
## LR(1) items:
bndl -> LANGLE NAME . bndlc RANGLE [ NAME ]
## Transitions:
-- On COMMA shift to state 4
-- On bndlc shift to state 7
## Reductions:
-- On RANGLE
--   reduce production bndlc ->

State 4:
## Known stack suffix:
## COMMA
## LR(1) items:
bndlc -> COMMA . NAME bndlc [ RANGLE ]
## Transitions:
-- On NAME shift to state 5
## Reductions:

State 5:
## Known stack suffix:
## COMMA NAME
## LR(1) items:
bndlc -> COMMA NAME . bndlc [ RANGLE ]
## Transitions:
-- On COMMA shift to state 4
-- On bndlc shift to state 6
## Reductions:
-- On RANGLE
--   reduce production bndlc ->

State 6:
## Known stack suffix:
## COMMA NAME bndlc
## LR(1) items:
bndlc -> COMMA NAME bndlc . [ RANGLE ]
## Transitions:
## Reductions:
-- On RANGLE
--   reduce production bndlc -> COMMA NAME bndlc

State 7:
## Known stack suffix:
## LANGLE NAME bndlc
## LR(1) items:
bndl -> LANGLE NAME bndlc . RANGLE [ NAME ]
## Transitions:
-- On RANGLE shift to state 8
## Reductions:

State 8:
## Known stack suffix:
## LANGLE NAME bndlc RANGLE
## LR(1) items:
bndl -> LANGLE NAME bndlc RANGLE . [ NAME ]
## Transitions:
## Reductions:
-- On NAME
--   reduce production bndl -> LANGLE NAME bndlc RANGLE

State 9:
## Known stack suffix:
## HAN bndl
## LR(1) items:
decls -> HAN bndl . NAME prms blck decls [ EOF ]
## Transitions:
-- On NAME shift to state 10
## Reductions:

State 10:
## Known stack suffix:
## HAN bndl NAME
## LR(1) items:
decls -> HAN bndl NAME . prms blck decls [ EOF ]
## Transitions:
-- On LPAREN shift to state 11
-- On prms shift to state 27
## Reductions:

State 11:
## Known stack suffix:
## LPAREN
## LR(1) items:
prms -> LPAREN . RPAREN [ LBRACE COLON ]
prms -> LPAREN . NAME COLON vtyp prmsc RPAREN [ LBRACE COLON ]
## Transitions:
-- On RPAREN shift to state 12
-- On NAME shift to state 13
## Reductions:

State 12:
## Known stack suffix:
## LPAREN RPAREN
## LR(1) items:
prms -> LPAREN RPAREN . [ LBRACE COLON ]
## Transitions:
## Reductions:
-- On LBRACE COLON
--   reduce production prms -> LPAREN RPAREN

State 13:
## Known stack suffix:
## LPAREN NAME
## LR(1) items:
prms -> LPAREN NAME . COLON vtyp prmsc RPAREN [ LBRACE COLON ]
## Transitions:
-- On COLON shift to state 14
## Reductions:

State 14:
## Known stack suffix:
## LPAREN NAME COLON
## LR(1) items:
prms -> LPAREN NAME COLON . vtyp prmsc RPAREN [ LBRACE COLON ]
## Transitions:
-- On UNIT shift to state 15
-- On STRING shift to state 16
-- On INT shift to state 17
-- On BOOL shift to state 18
-- On vtyp shift to state 19
## Reductions:

State 15:
## Known stack suffix:
## UNIT
## LR(1) items:
vtyp -> UNIT . [ RPAREN LARROW EQUALS COMMA ]
## Transitions:
## Reductions:
-- On RPAREN LARROW EQUALS COMMA
--   reduce production vtyp -> UNIT

State 16:
## Known stack suffix:
## STRING
## LR(1) items:
vtyp -> STRING . [ RPAREN LARROW EQUALS COMMA ]
## Transitions:
## Reductions:
-- On RPAREN LARROW EQUALS COMMA
--   reduce production vtyp -> STRING

State 17:
## Known stack suffix:
## INT
## LR(1) items:
vtyp -> INT . [ RPAREN LARROW EQUALS COMMA ]
## Transitions:
## Reductions:
-- On RPAREN LARROW EQUALS COMMA
--   reduce production vtyp -> INT

State 18:
## Known stack suffix:
## BOOL
## LR(1) items:
vtyp -> BOOL . [ RPAREN LARROW EQUALS COMMA ]
## Transitions:
## Reductions:
-- On RPAREN LARROW EQUALS COMMA
--   reduce production vtyp -> BOOL

State 19:
## Known stack suffix:
## LPAREN NAME COLON vtyp
## LR(1) items:
prms -> LPAREN NAME COLON vtyp . prmsc RPAREN [ LBRACE COLON ]
## Transitions:
-- On COMMA shift to state 20
-- On prmsc shift to state 25
## Reductions:
-- On RPAREN
--   reduce production prmsc ->

State 20:
## Known stack suffix:
## COMMA
## LR(1) items:
prmsc -> COMMA . NAME COLON vtyp prmsc [ RPAREN ]
## Transitions:
-- On NAME shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## COMMA NAME
## LR(1) items:
prmsc -> COMMA NAME . COLON vtyp prmsc [ RPAREN ]
## Transitions:
-- On COLON shift to state 22
## Reductions:

State 22:
## Known stack suffix:
## COMMA NAME COLON
## LR(1) items:
prmsc -> COMMA NAME COLON . vtyp prmsc [ RPAREN ]
## Transitions:
-- On UNIT shift to state 15
-- On STRING shift to state 16
-- On INT shift to state 17
-- On BOOL shift to state 18
-- On vtyp shift to state 23
## Reductions:

State 23:
## Known stack suffix:
## COMMA NAME COLON vtyp
## LR(1) items:
prmsc -> COMMA NAME COLON vtyp . prmsc [ RPAREN ]
## Transitions:
-- On COMMA shift to state 20
-- On prmsc shift to state 24
## Reductions:
-- On RPAREN
--   reduce production prmsc ->

State 24:
## Known stack suffix:
## COMMA NAME COLON vtyp prmsc
## LR(1) items:
prmsc -> COMMA NAME COLON vtyp prmsc . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production prmsc -> COMMA NAME COLON vtyp prmsc

State 25:
## Known stack suffix:
## LPAREN NAME COLON vtyp prmsc
## LR(1) items:
prms -> LPAREN NAME COLON vtyp prmsc . RPAREN [ LBRACE COLON ]
## Transitions:
-- On RPAREN shift to state 26
## Reductions:

State 26:
## Known stack suffix:
## LPAREN NAME COLON vtyp prmsc RPAREN
## LR(1) items:
prms -> LPAREN NAME COLON vtyp prmsc RPAREN . [ LBRACE COLON ]
## Transitions:
## Reductions:
-- On LBRACE COLON
--   reduce production prms -> LPAREN NAME COLON vtyp prmsc RPAREN

State 27:
## Known stack suffix:
## HAN bndl NAME prms
## LR(1) items:
decls -> HAN bndl NAME prms . blck decls [ EOF ]
## Transitions:
-- On LBRACE shift to state 28
-- On blck shift to state 162
## Reductions:

State 28:
## Known stack suffix:
## LBRACE
## LR(1) items:
blck -> LBRACE . stmt [ RBRACE OTHERWISE HAN FUN EOF BAR ]
## Transitions:
-- On WHEN shift to state 29
-- On STOP shift to state 75
-- On START shift to state 78
-- On SEND shift to state 97
-- On SELECT shift to state 102
-- On RECEIVE shift to state 107
-- On OPEN shift to state 114
-- On NOW shift to state 119
-- On LET shift to state 125
-- On HANDLE shift to state 130
-- On CLOSE shift to state 142
-- On AWAIT shift to state 145
-- On stmt shift to state 161
## Reductions:

State 29:
## Known stack suffix:
## WHEN
## LR(1) items:
stmt -> WHEN . expn DO blck OTHERWISE blck RBRACE [ RBRACE OTHERWISE HAN FUN EOF BAR ]
## Transitions:
-- On TRUE shift to state 30
-- On TEXT shift to state 31
-- On NUMBER shift to state 32
-- On NOT shift to state 33
-- On NAME shift to state 34
-- On LPAREN shift to state 37
-- On IF shift to state 38
-- On FALSE shift to state 39
-- On expn shift to state 69
## Reductions:

State 30:
## Known stack suffix:
## TRUE
## LR(1) items:
expn -> TRUE . [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO
--   reduce production expn -> TRUE

State 31:
## Known stack suffix:
## TEXT
## LR(1) items:
expn -> TEXT . [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO
--   reduce production expn -> TEXT

State 32:
## Known stack suffix:
## NUMBER
## LR(1) items:
expn -> NUMBER . [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO
--   reduce production expn -> NUMBER

State 33:
## Known stack suffix:
## NOT
## LR(1) items:
expn -> NOT . expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
## Transitions:
-- On TRUE shift to state 30
-- On TEXT shift to state 31
-- On NUMBER shift to state 32
-- On NOT shift to state 33
-- On NAME shift to state 34
-- On LPAREN shift to state 37
-- On IF shift to state 38
-- On FALSE shift to state 39
-- On expn shift to state 68
## Reductions:

State 34:
## Known stack suffix:
## NAME
## LR(1) items:
expn -> NAME . [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
expn -> NAME . expns [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
## Transitions:
-- On LPAREN shift to state 35
-- On expns shift to state 67
## Reductions:
-- On TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO
--   reduce production expn -> NAME

State 35:
## Known stack suffix:
## LPAREN
## LR(1) items:
expns -> LPAREN . RPAREN [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
expns -> LPAREN . expn expnsc RPAREN [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
## Transitions:
-- On TRUE shift to state 30
-- On TEXT shift to state 31
-- On RPAREN shift to state 36
-- On NUMBER shift to state 32
-- On NOT shift to state 33
-- On NAME shift to state 34
-- On LPAREN shift to state 37
-- On IF shift to state 38
-- On FALSE shift to state 39
-- On expn shift to state 61
## Reductions:

State 36:
## Known stack suffix:
## LPAREN RPAREN
## LR(1) items:
expns -> LPAREN RPAREN . [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO
--   reduce production expns -> LPAREN RPAREN

State 37:
## Known stack suffix:
## LPAREN
## LR(1) items:
expn -> LPAREN . expn RPAREN [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
## Transitions:
-- On TRUE shift to state 30
-- On TEXT shift to state 31
-- On NUMBER shift to state 32
-- On NOT shift to state 33
-- On NAME shift to state 34
-- On LPAREN shift to state 37
-- On IF shift to state 38
-- On FALSE shift to state 39
-- On expn shift to state 59
## Reductions:

State 38:
## Known stack suffix:
## IF
## LR(1) items:
expn -> IF . expn THEN expn ELSE expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
## Transitions:
-- On TRUE shift to state 30
-- On TEXT shift to state 31
-- On NUMBER shift to state 32
-- On NOT shift to state 33
-- On NAME shift to state 34
-- On LPAREN shift to state 37
-- On IF shift to state 38
-- On FALSE shift to state 39
-- On expn shift to state 40
## Reductions:

State 39:
## Known stack suffix:
## FALSE
## LR(1) items:
expn -> FALSE . [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO
--   reduce production expn -> FALSE

State 40:
## Known stack suffix:
## IF expn
## LR(1) items:
expn -> expn . LESSEQ expn [ TIMES THEN PLUS ORELSE MINUS LESSEQ EQUALS ANDALSO ]
expn -> expn . EQUALS expn [ TIMES THEN PLUS ORELSE MINUS LESSEQ EQUALS ANDALSO ]
expn -> expn . PLUS expn [ TIMES THEN PLUS ORELSE MINUS LESSEQ EQUALS ANDALSO ]
expn -> expn . MINUS expn [ TIMES THEN PLUS ORELSE MINUS LESSEQ EQUALS ANDALSO ]
expn -> expn . TIMES expn [ TIMES THEN PLUS ORELSE MINUS LESSEQ EQUALS ANDALSO ]
expn -> expn . ANDALSO expn [ TIMES THEN PLUS ORELSE MINUS LESSEQ EQUALS ANDALSO ]
expn -> expn . ORELSE expn [ TIMES THEN PLUS ORELSE MINUS LESSEQ EQUALS ANDALSO ]
expn -> IF expn . THEN expn ELSE expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
## Transitions:
-- On TIMES shift to state 41
-- On THEN shift to state 43
-- On PLUS shift to state 45
-- On ORELSE shift to state 47
-- On MINUS shift to state 49
-- On LESSEQ shift to state 51
-- On EQUALS shift to state 53
-- On ANDALSO shift to state 55
## Reductions:

State 41:
## Known stack suffix:
## expn TIMES
## LR(1) items:
expn -> expn TIMES . expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
## Transitions:
-- On TRUE shift to state 30
-- On TEXT shift to state 31
-- On NUMBER shift to state 32
-- On NOT shift to state 33
-- On NAME shift to state 34
-- On LPAREN shift to state 37
-- On IF shift to state 38
-- On FALSE shift to state 39
-- On expn shift to state 42
## Reductions:

State 42:
## Known stack suffix:
## expn TIMES expn
## LR(1) items:
expn -> expn . LESSEQ expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
expn -> expn . EQUALS expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
expn -> expn . PLUS expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
expn -> expn . MINUS expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
expn -> expn . TIMES expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
expn -> expn TIMES expn . [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
expn -> expn . ANDALSO expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
expn -> expn . ORELSE expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO
--   reduce production expn -> expn TIMES expn

State 43:
## Known stack suffix:
## IF expn THEN
## LR(1) items:
expn -> IF expn THEN . expn ELSE expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
## Transitions:
-- On TRUE shift to state 30
-- On TEXT shift to state 31
-- On NUMBER shift to state 32
-- On NOT shift to state 33
-- On NAME shift to state 34
-- On LPAREN shift to state 37
-- On IF shift to state 38
-- On FALSE shift to state 39
-- On expn shift to state 44
## Reductions:

State 44:
## Known stack suffix:
## IF expn THEN expn
## LR(1) items:
expn -> expn . LESSEQ expn [ TIMES PLUS ORELSE MINUS LESSEQ EQUALS ELSE ANDALSO ]
expn -> expn . EQUALS expn [ TIMES PLUS ORELSE MINUS LESSEQ EQUALS ELSE ANDALSO ]
expn -> expn . PLUS expn [ TIMES PLUS ORELSE MINUS LESSEQ EQUALS ELSE ANDALSO ]
expn -> expn . MINUS expn [ TIMES PLUS ORELSE MINUS LESSEQ EQUALS ELSE ANDALSO ]
expn -> expn . TIMES expn [ TIMES PLUS ORELSE MINUS LESSEQ EQUALS ELSE ANDALSO ]
expn -> expn . ANDALSO expn [ TIMES PLUS ORELSE MINUS LESSEQ EQUALS ELSE ANDALSO ]
expn -> expn . ORELSE expn [ TIMES PLUS ORELSE MINUS LESSEQ EQUALS ELSE ANDALSO ]
expn -> IF expn THEN expn . ELSE expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
## Transitions:
-- On TIMES shift to state 41
-- On PLUS shift to state 45
-- On ORELSE shift to state 47
-- On MINUS shift to state 49
-- On LESSEQ shift to state 51
-- On EQUALS shift to state 53
-- On ELSE shift to state 57
-- On ANDALSO shift to state 55
## Reductions:

State 45:
## Known stack suffix:
## expn PLUS
## LR(1) items:
expn -> expn PLUS . expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
## Transitions:
-- On TRUE shift to state 30
-- On TEXT shift to state 31
-- On NUMBER shift to state 32
-- On NOT shift to state 33
-- On NAME shift to state 34
-- On LPAREN shift to state 37
-- On IF shift to state 38
-- On FALSE shift to state 39
-- On expn shift to state 46
## Reductions:

State 46:
## Known stack suffix:
## expn PLUS expn
## LR(1) items:
expn -> expn . LESSEQ expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
expn -> expn . EQUALS expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
expn -> expn . PLUS expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
expn -> expn PLUS expn . [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
expn -> expn . MINUS expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
expn -> expn . TIMES expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
expn -> expn . ANDALSO expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
expn -> expn . ORELSE expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
## Transitions:
-- On TIMES shift to state 41
## Reductions:
-- On THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO
--   reduce production expn -> expn PLUS expn

State 47:
## Known stack suffix:
## expn ORELSE
## LR(1) items:
expn -> expn ORELSE . expn [ TIMES THEN SEMI RPAREN RARROW PLUS ORELSE MINUS LESSEQ HAN FUN EQUALS EOF ELSE DO COMMA ANDALSO ]
## Transitions:
-- On TRUE shift to state 30
-- On TEXT shift to state 31
-- On NUMBER shift to state 32
-- On NOT shift to state 33
-- On NAME shift to state 34
-- On LPAREN shift to state 37
-- On IF shift to state 38
-- On FALSE shift to state 39
-- On expn shift to state 48
## Reductions:
